# thesis

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml
cmake/: FindLibevdev.cmake
kernel/: Makefile  encoders.dts  kurt-encoders.dts
latex/: .gitignore  plots.pgf  references.bib  thesis.tex  thesis_KBS.cls  unilogo.eps
latex/kicad/: cd4093.dcm  cd4093.lib  traco.lib
latex/kicad/electronics/: electronics-cache.lib  electronics.pro  electronics.sch
latex/kicad/h-bridge/: h-bridge-cache.lib  h-bridge.pro  h-bridge.sch
latex/kicad/motor-module/: motor-module-cache.lib  motor-module.pro  motor-module.sch
latex/kicad/pi-header/: pi-header.kicad_pcb  pi-header.net  (+2 more)
launch/: kurt-ps3.launch  kurt.launch
node/: CMakeLists.txt
node/src/: Encoder.cpp  Encoder.hpp  GPIOEncoder.hpp  Motor.hpp  PiBot.cpp  PiGPIO.cpp
ros/: CMakeLists.txt  README.md  package.xml
ros/cmake/: FindPiGPIO.cmake
ros/launch/: kurt.launch
ros/src/: Encoder.cpp  Encoder.hpp  EvdevEncoder.cpp  EvdevEncoder.hpp  GPIOEncoder.cpp  GPIOEncoder.hpp  Main.cpp  Motor.cpp  Motor.hpp  Odometry.cpp  Odometry.hpp  PiGPIO.cpp  PiGPIO.hpp  RawEncoder.hpp  Utils.hpp
scripts/: .gitignore  README.md  draw.py  encoder.py  motor.py  plotodom.py  plotticks.py
src/: Encoder.cpp  Encoder.hpp  EvdevEncoder.cpp  EvdevEncoder.hpp  GPIOEncoder.cpp  GPIOEncoder.hpp  Kurt.cpp  Kurt.hpp  Main.cpp  Motor.cpp  Motor.hpp  Odometry.cpp  PIController.cpp  PIController.hpp  PIDController.cpp  PIDController.hpp  PiBot.cpp  PiGPIO.hpp  Utils.cpp
urdf/: kurt_indoor.urdf.xacro  kurt_outdoor.urdf.xacro
